Define OCTOKIT_GITHUB_API_BASE_URL as valid input
And add script to run main. Try:
  GITHUB_EVENT_PATH=./test-event2.json yarn run main

Where ./test-event2.json contains a sample event from GitHub.

--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,10 @@ inputs:
     description: "OpenAI API model."
     required: false
     default: "gpt-4"
+  OCTOKIT_GITHUB_API_BASE_URL:
+    description: "GitHub API base URL."
+    required: false
+    default: ""
   exclude:
     description: "Glob patterns to exclude files from the diff analysis"
     required: false
